<resources>
    <string name="app_name">펫플레이스</string>
    <string name="login">로그인</string>
    <string name="signup">회원가입</string>
    <string name="my">My</string>
    <string name="user_suffix">님</string>
    <string name="attention_list">관심목록</string>
    <string name="recent_shops">최근 본 가게</string>
    <string name="my_reviews">내 리뷰</string>
    <string name="pet_registration">펫 등록</string>
    <string name="one_on_one_inquiry">1:1 문의</string>
    <string name="hint_id">아이디를 입력해주세요.</string>
    <string name="hint_pw">비밀번호를 입력해주세요.</string>
    <string name="save_id">아이디 저장</string>
    <string name="retrieve_id">아이디 찾기</string>
    <string name="retrieve_pw">비밀번호 찾기</string>
    <string name="easy_login">간편 로그인</string>
    <string name="contentDescription_loginscreen">로그인 화면</string>
    <string name="contentDescription_return">돌아가기</string>
    <string name="contentDescription_kakao">카카오로 로그인</string>
    <string name="contentDescription_naver">네이버로 로그인</string>
    <string name="contentDescription_saveid">아이디 저장 체크박스</string>
    <string name="contentDescription_retrieveid">아이디 찾기</string>
    <string name="contentDescription_retrievepw">비밀번호 찾기</string>
    <string name="contentDescription_login">로그인</string>
    <string name="contentDescription_signin">회원가입</string>
    <string name="contentDescription_mypage">마이페이지</string>
    <string name="contentDescription_owner_signup">사장님으로 회원가입</string>
    <string name="contentDescription_customer_signup">고객으로 회원가입</string>
    <string name="recent_search_word">최근 검색어</string>
    <string name="recommend_search_word">추천 검색어</string>
    <string name="search_hint">원하는 장소 검색..</string>
    <string name="cancel">취소</string>
    <string name="region_all">전체 지역</string>
    <string name="convenience">편의 시설</string>
    <string name="pet">반려동물</string>
    <string name="customer">고객</string>
    <string name="owner">사장님</string>
    <string name="user_info">사용자 정보</string>
    <string name="name">이름</string>
    <string name="hint_name">실명 입력..</string>
    <string name="id">아이디</string>
    <string name="hint_id_signup">4~20자리 영문, 숫자 입력..</string>
    <string name="password">비밀번호</string>
    <string name="hint_pw_signup">영문, 숫자, 특수문자 포함 8~20자리 입력..</string>
    <string name="password_check">비밀번호 확인</string>
    <string name="hint_pw_check_signup">비밀번호 동일하게 입력...</string>
    <string name="nickname">닉네임</string>
    <string name="hint_nickname">닉네임 입력..</string>
    <string name="phone">전화번호</string>
    <string name="hint_phone">010-1234-5678</string>
    <string name="marketing">마케팅 활용 동의</string>
    <string name="agree">동의</string>
    <string name="disagree">비동의</string>
    <string name="business_info">업장 정보</string>
    <string name="business_number">사업자 등록번호</string>
    <string name="hint_business_number">000-00-00000</string>
    <string name="business_adress">영업장 주소</string>
    <string name="hint_business_adress">주소 입력..</string>
    <string name="service_type">서비스 유형</string>
    <string name="restaurant">식당</string>
    <string name="cafe">카페</string>
    <string name="other">기타</string>
    <string name="submit">제출</string>
    <string name="best_review_format">%1$s: %2$s</string>
    <string name="business_number_format">000-00-00000</string>
    <string name="phone_foramt">000-0000-0000</string>
</resources>
