<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/btnReturn"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:background="@null"
        android:contentDescription="@string/contentDescription_return"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toTopOf="@+id/verticalLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_return" />

    <View
        android:id="@+id/verticalLine"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="#E0E0E0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.12" />

    <TextView
        android:id="@+id/textViewTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/contentDescription_mypage"
        android:fontFamily="@font/nanum_gothic_extra_bold"
        android:text="@string/signup"
        android:textColor="#FF8E4F"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@id/verticalLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.55" />

    <FrameLayout
        android:layout_width="409dp"
        android:layout_height="640dp"
        android:id="@+id/fragmentContainer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verticalLine">

    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>